src/objects/Freshbooks_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Freshbooks Payments</relationshipLabel>
        <relationshipName>Freshbooks_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freshbooks_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Freshbooks Invoice</label>
        <referenceTo>Freshbooks_Invoice__c</referenceTo>
        <relationshipLabel>Freshbooks Payments</relationshipLabel>
        <relationshipName>Freshbooks_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Freshbooks_Payment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Freshbooks Payment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Freshbooks Payment</label>
    <nameField>
        <label>Freshbooks Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freshbooks Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>